juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    app: juice-shop
  type: ClusterIP
  
  ports:
  - name: juice-shop
    protocol: TCP
    port: 8000
    targetPort: 8000
